--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+.big_link_span { 
+  position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+
+  z-index: 1;
+
+  /* fixes overlap error in IE7/8, 
+     make sure you have an empty gif */
+  background-image: url('empty.gif');
+}
+
+.fixed-prefix-input { position: relative; }
+
+.prefix-input { display: block; border: 1px solid #d7d6d6; background: #fff; padding: 10px 10px 10px 20px; width: 195px; }
+
+.prefix-span { position: absolute; display: block; left: 5px; top: 10px; z-index: 9; }
+
 body {
 background: url(images/bg.png);
 margin: 0;
@@ -10,7 +30,16 @@ p {
 line-height: 10px;
 }
 
-a { color: #fff; font-weight: bold; text-decoration: none; }
+.btn {
+    color: #fff !important;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+    color: #001364;
+}
 
 p.littl { font-size: 12px; line-height: 13px;}
 
@@ -29,11 +58,7 @@ background: url(images/box_x.png) repeat-x;
 float: left;
 margin-left: 20px;
 margin-top: 20px;
-display: inline;
-}
-
-.span3 {
-  width: 304px;
+position:relative;
 }
 
 .buttoninside {
@@ -80,44 +105,183 @@ font-weight: bold;
 }
 
 .row-fluid {
-  width: 100%;
-  *zoom: 1;
+    width: 100%;
+    *zoom: 1;
 }
-
 .row-fluid:before,
 .row-fluid:after {
-  display: table;
-  line-height: 0;
-  content: "";
+display: table;
+line-height: 0;
+content: "";
 }
-
 .row-fluid:after {
-  clear: both;
+clear: both;
+}
+.row-fluid [class*="span"] {
+display: block;
+float: left;
+width: 100%;
+min-height: 30px;
+margin-left: 2.564102564102564%;
+*margin-left: 2.5109110747408616%;
+-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+        box-sizing: border-box;
+}
+.row-fluid [class*="span"]:first-child {
+margin-left: 0;
+}
+.row-fluid .controls-row [class*="span"] + [class*="span"] {
+margin-left: 2.564102564102564%;
+}
+.row-fluid .span12 {
+width: 100%;
+*width: 99.94680851063829%;
+}
+.row-fluid .span11 {
+width: 91.45299145299145%;
+*width: 91.39979996362975%;
+}
+.row-fluid .span10 {
+width: 82.90598290598291%;
+*width: 82.8527914166212%;
+}
+.row-fluid .span9 {
+width: 74.35897435897436%;
+*width: 74.30578286961266%;
+}
+.row-fluid .span8 {
+width: 65.81196581196582%;
+*width: 65.75877432260411%;
+}
+.row-fluid .span7 {
+width: 57.26495726495726%;
+*width: 57.21176577559556%;
+}
+.row-fluid .span6 {
+width: 48.717948717948715%;
+*width: 48.664757228587014%;
+}
+.row-fluid .span5 {
+width: 40.17094017094017%;
+*width: 40.11774868157847%;
+}
+.row-fluid .span4 {
+width: 31.623931623931625%;
+*width: 31.570740134569924%;
+}
+.row-fluid .span3 {
+width: 23.076923076923077%;
+*width: 23.023731587561375%;
+}
+.row-fluid .span2 {
+width: 14.52991452991453%;
+*width: 14.476723040552828%;
+}
+.row-fluid .span1 {
+width: 5.982905982905983%;
+*width: 5.929714493544281%;
+}
+.row-fluid .offset12 {
+margin-left: 105.12820512820512%;
+*margin-left: 105.02182214948171%;
+}
+.row-fluid .offset12:first-child {
+margin-left: 102.56410256410257%;
+*margin-left: 102.45771958537915%;
+}
+.row-fluid .offset11 {
+margin-left: 96.58119658119658%;
+*margin-left: 96.47481360247316%;
+}
+.row-fluid .offset11:first-child {
+margin-left: 94.01709401709402%;
+*margin-left: 93.91071103837061%;
+}
+.row-fluid .offset10 {
+margin-left: 88.03418803418803%;
+*margin-left: 87.92780505546462%;
+}
+.row-fluid .offset10:first-child {
+margin-left: 85.47008547008548%;
+*margin-left: 85.36370249136206%;
+}
+.row-fluid .offset9 {
+margin-left: 79.48717948717949%;
+*margin-left: 79.38079650845607%;
+}
+.row-fluid .offset9:first-child {
+margin-left: 76.92307692307693%;
+*margin-left: 76.81669394435352%;
+}
+.row-fluid .offset8 {
+margin-left: 70.94017094017094%;
+*margin-left: 70.83378796144753%;
+}
+.row-fluid .offset8:first-child {
+margin-left: 68.37606837606839%;
+*margin-left: 68.26968539734497%;
+}
+.row-fluid .offset7 {
+margin-left: 62.393162393162385%;
+*margin-left: 62.28677941443899%;
+}
+.row-fluid .offset7:first-child {
+margin-left: 59.82905982905982%;
+*margin-left: 59.72267685033642%;
+}
+.row-fluid .offset6 {
+margin-left: 53.84615384615384%;
+*margin-left: 53.739770867430444%;
+}
+.row-fluid .offset6:first-child {
+margin-left: 51.28205128205128%;
+*margin-left: 51.175668303327875%;
+}
+.row-fluid .offset5 {
+margin-left: 45.299145299145295%;
+*margin-left: 45.1927623204219%;
+}
+.row-fluid .offset5:first-child {
+margin-left: 42.73504273504273%;
+*margin-left: 42.62865975631933%;
+}
+.row-fluid .offset4 {
+margin-left: 36.75213675213675%;
+*margin-left: 36.645753773413354%;
+}
+.row-fluid .offset4:first-child {
+margin-left: 34.18803418803419%;
+*margin-left: 34.081651209310785%;
+}
+.row-fluid .offset3 {
+margin-left: 28.205128205128204%;
+*margin-left: 28.0987452264048%;
+}
+.row-fluid .offset3:first-child {
+margin-left: 25.641025641025642%;
+*margin-left: 25.53464266230224%;
+}
+.row-fluid .offset2 {
+margin-left: 19.65811965811966%;
+*margin-left: 19.551736679396257%;
+}
+.row-fluid .offset2:first-child {
+margin-left: 17.094017094017094%;
+*margin-left: 16.98763411529369%;
+}
+.row-fluid .offset1 {
+margin-left: 11.11111111111111%;
+*margin-left: 11.004728132387708%;
+}
+.row-fluid .offset1:first-child {
+margin-left: 8.547008547008547%;
+*margin-left: 8.440625568285142%;
 }
 
-.big_link_span { 
-  position:absolute; 
-  width:100%;
-  height:100%;
-  top:0;
-  left: 0;
-
-  z-index: 1;
-
-  /* fixes overlap error in IE7/8, 
-     make sure you have an empty gif */
-  background-image: url('empty.gif');
-}
-
-.modal {
-    top: 10px;
-    right: 10px;
-    left: 10px;
-}
-
-.modal-header .close {
-padding: 10px;
-margin: -10px;
+.image-div {
+    min-height: 300px;
+    width:inherit;
 }
 
 .close {
@@ -140,10 +304,8 @@ margin: -10px;
   filter: alpha(opacity=40);
 }
 
-button.close {
-  padding: 0;
-  cursor: pointer;
-  background: transparent;
-  border: 0;
-  -webkit-appearance: none;
+.modal-img {
+    display:block;
+  margin-left:auto;
+  margin-right:auto;
 }
