--- a/style.css
+++ b/style.css
@@ -34,11 +34,17 @@ line-height: 10px;
     color: #fff !important;
     font-weight: bold;
     text-decoration: none;
+    z-index:3 !important;
+    position: relative;
 }
 
 a {
     text-decoration: none;
     color: #001364;
+}
+
+.modal-link {
+    text-decoration: underline !important;
 }
 
 p.littl { font-size: 12px; line-height: 13px;}
@@ -280,7 +286,7 @@ margin-left: 8.547008547008547%;
 }
 
 .image-div {
-    min-height: 300px;
+    height: 300px;
     width:inherit;
 }
 
@@ -308,4 +314,13 @@ margin-left: 8.547008547008547%;
     display:block;
   margin-left:auto;
   margin-right:auto;
+}
+
+ul
+{
+    list-style-type: none;
+}
+
+select {
+    height: 40px !important;
 }
